--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,28 +1,49 @@
 name: Compile QuickNES MIPS32 Little Endian
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 仅手动触发，方便测试
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - name: Install dependencies
+      - name: Install required dependencies
         run: |
+          # 更新源并安装mips32el交叉编译器和基础工具
           sudo apt update -y
           sudo apt install -y gcc-mipsel-linux-gnu git
 
-      - name: Clone QuickNES core
-        run: git clone https://github.com/libretro/QuickNES_Core.git
-
-      - name: Compile for mips32el
+      - name: Clone QuickNES Core source code
         run: |
-          cd QuickNES_Core/quicknes_libretro
-          # 直接用交叉编译器编译，无需configure
-          mipsel-linux-gnu-gcc -mips32 -EL -O2 -fPIC -shared *.c -o quicknes_libretro.so -lm
+          # 克隆官方QuickNES核心仓库
+          git clone --depth=1 https://github.com/libretro/QuickNES_Core.git
+          # 关键：查看仓库目录结构（调试用，确认文件位置）
+          ls -la QuickNES_Core/
+          # 列出所有.c文件，确认编译源文件存在
+          ls -la QuickNES_Core/*.c || echo "No .c files in root, check subdirs"
 
-      - name: Upload artifact
+      - name: Compile QuickNES Core for mips32el
+        run: |
+          # 切换到正确的目录（仓库根目录）
+          cd QuickNES_Core
+          # 编译命令修正：直接在根目录编译，补充必要编译参数
+          # -mips32：指定mips32架构
+          # -EL：强制小端模式
+          # -fPIC：生成位置无关代码（动态库必需）
+          # -shared：编译为动态库（libretro核心标准格式）
+          # -O2：优化编译
+          # -lm：链接数学库
+          # -Wall：显示编译警告（便于排查问题）
+          mipsel-linux-gnu-gcc -mips32 -EL -O2 -fPIC -shared \
+            *.c -o quicknes_libretro.so -lm -Wall
+          # 验证编译产物是否存在
+          ls -la quicknes_libretro.so
+          # 验证产物架构（关键：确认是mips32小端）
+          file quicknes_libretro.so
+
+      - name: Upload compiled core
         uses: actions/upload-artifact@v4
         with:
-          name: quicknes-mips32el
-          path: QuickNES_Core/quicknes_libretro/quicknes_libretro.so
+          name: quicknes-libretro-mips32el
+          path: QuickNES_Core/quicknes_libretro.so
+          retention-days: 30
