--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,66 +1,78 @@
-# 工作流名称，会显示在GitHub Actions页面
 name: Build mips32el libretro core
 
-# 触发条件：推送到main分支时自动运行，也支持手动触发
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # 手动触发开关
+  workflow_dispatch:
 
-# 定义编译任务
 jobs:
   build:
-    # 运行环境：Ubuntu 22.04（LTS版，依赖更稳定）
     runs-on: ubuntu-22.04
-    
     steps:
-      # 步骤1：拉取仓库代码（空仓库也需要这一步初始化环境）
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 步骤2：安装mips32el交叉编译工具链和依赖
       - name: Install cross-compiler and dependencies
         run: |
-          # 更新软件源
           sudo apt update -y
-          # 安装mips32el交叉编译工具链（核心）
-          sudo apt install -y gcc-mipsel-linux-gnu g++-mipsel-linux-gnu
-          # 安装编译libretro核心所需的基础依赖
-          sudo apt install -y make git build-essential libsdl2-dev
+          # 安装完整的依赖（包含fbneo/fceumm所需的所有基础库）
+          sudo apt install -y gcc-mipsel-linux-gnu g++-mipsel-linux-gnu \
+            make git build-essential libsdl2-dev zlib1g-dev libpng-dev
 
-      # 步骤3：拉取libretro核心源码（以fbneo为例，可替换为其他核心）
-      - name: Clone libretro core source code
+      # 方案1：先编译fceumm（兼容性最好，验证环境），注释掉可换fbneo
+      - name: Clone fceumm core (stable for test)
         run: |
-          # 克隆fbneo核心源码（其他核心可替换此仓库地址）
-          git clone https://github.com/libretro/FBNeo.git libretro-fbneo
-          cd libretro-fbneo
-          # 进入libretro编译目录（大部分核心都有这个目录）
-          cd src/burner/libretro
+          git clone https://github.com/libretro/libretro-fceumm.git libretro-fceumm
+          # 验证目录是否存在
+          ls -l libretro-fceumm/Makefile || echo "Makefile not found!"
 
-      # 步骤4：交叉编译mips32el架构的libretro核心
-      - name: Cross compile for mips32el
+      # 方案2：编译fbneo（需特殊适配），取消注释即可启用
+      # - name: Clone fbneo core
+      #   run: |
+      #     git clone https://github.com/libretro/FBNeo.git libretro-fbneo
+      #     ls -l libretro-fbneo/src/burner/libretro/Makefile || echo "Makefile not found!"
+
+      - name: Cross compile fceumm for mips32el (stable)
         run: |
-          cd libretro-fbneo/src/burner/libretro
-          # 设置交叉编译工具链前缀
+          # 开启详细日志，出错立即停止（便于排查）
+          set -ex
+          cd libretro-fceumm
+          # 配置交叉编译工具链（核心参数）
           export CC=mipsel-linux-gnu-gcc
           export CXX=mipsel-linux-gnu-g++
-          # 编译：指定架构为mips32，小端，优化等级O2，生成.so文件
+          export AR=mipsel-linux-gnu-ar
+          export LD=mipsel-linux-gnu-ld
+          # 编译fceumm：仅保留核心架构参数（fceumm不识别自定义参数）
           make -j$(nproc) \
-            platform=libretro \
-            ARCH=mips \
-            CPU=mips32 \
-            ENDIANNESS=little \
-            CFLAGS="-mips32 -EL -O2" \
-            CXXFLAGS="-mips32 -EL -O2" \
+            platform=unix \
+            ARCH=mips32 \
+            CFLAGS="-mips32 -EL -O2 -mhard-float" \
+            CXXFLAGS="-mips32 -EL -O2 -mhard-float" \
             LDFLAGS="-mips32 -EL"
-          # 验证编译产物的架构（可选，用于确认是否为mips32el）
-          file fbneo_libretro.so
+          # 验证编译产物（关键：确认架构是mips32小端）
+          file fceumm_libretro.so
+          # 列出产物信息
+          ls -lh fceumm_libretro.so
 
-      # 步骤5：上传编译产物（方便下载）
+      # 适配fbneo的编译步骤（需取消注释）
+      # - name: Cross compile fbneo for mips32el
+      #   run: |
+      #     set -ex
+      #     cd libretro-fbneo/src/burner/libretro
+      #     export CC=mipsel-linux-gnu-gcc
+      #     export CXX=mipsel-linux-gnu-g++
+      #     # fbneo的Makefile仅需指定编译器和架构参数，无需自定义ENDIANNESS
+      #     make -j$(nproc) \
+      #       TARGET=mips \
+      #       CFLAGS="-mips32 -EL -O2 -DNDEBUG" \
+      #       CXXFLAGS="-mips32 -EL -O2 -DNDEBUG" \
+      #       LDFLAGS="-mips32 -EL"
+      #     file fbneo_libretro.so
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          # 产物名称，下载时会显示
-          name: fbneo-libretro-mips32el
-          # 编译产物的路径
-          path: libretro-fbneo/src/burner/libretro/fbneo_libretro.so
+          name: fceumm-libretro-mips32el
+          path: libretro-fceumm/fceumm_libretro.so
+          # 若编译fbneo，替换为：
+          # path: libretro-fbneo/src/burner/libretro/fbneo_libretro.so
