--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -25,26 +25,32 @@ jobs:
 
       - name: Clone libretro core source (pcsx_rearmed)
         run: |
+          # 关键修改1：clone时添加--recursive，自动拉取子模块（备选方案）
+          # git clone --recursive https://github.com/libretro/pcsx_rearmed.git libretro-pcsx_rearmed
+          # 兼容方案：先clone主仓库，再手动同步子模块（更稳定）
           git clone https://github.com/libretro/pcsx_rearmed.git libretro-pcsx_rearmed
           cd libretro-pcsx_rearmed
           git checkout master
+          # 关键修复：初始化并更新所有子模块（拉取libpicofe等依赖）
+          git submodule init
+          git submodule update
 
       - name: Build pcsx_rearmed libretro core for mips32el
         run: |
           cd libretro-pcsx_rearmed
-          # 关键修改1：通过CROSS_COMPILE指定交叉编译工具链前缀（替代--host）
+          # 指定交叉编译工具链前缀
           export CROSS_COMPILE=mipsel-linux-gnu-
-          # 编译参数（沿用修复后的mips32el配置）
+          # 编译参数
           export CC=${CROSS_COMPILE}gcc
           export CXX=${CROSS_COMPILE}g++
           export CFLAGS="-march=mips32 -mabi=32 -O2"
           export CXXFLAGS="-march=mips32 -mabi=32 -O2"
           export LDFLAGS="-march=mips32 -mabi=32"
           
-          # 关键修改2：仅使用configure支持的参数（--platform=generic适配libretro）
+          # 执行configure（仅使用支持的参数）
           ./configure --platform=generic --dynarec=none
           
-          # 执行编译（libretro核心编译需指定libretro Makefile）
+          # 编译libretro核心
           make -f Makefile.libretro -j$(nproc)
 
       - name: Upload build artifact
