--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,4 +1,4 @@
-name: Build MIPS32 Little-Endian PCSX-ReARMed Core
+name: Build MIPS32 Little-Endian Libretro Core
 
 on:
   push:
@@ -8,62 +8,38 @@ on:
 
 jobs:
   build-mips32el:
-    # 关键修改1：切换到Ubuntu 22.04（jammy），该版本保留了mipsel架构的依赖包
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install build dependencies
         run: |
-          # 关键修改2：更新源并启用mipsel架构，添加非交互参数
           sudo apt update -y
-          sudo dpkg --add-architecture mipsel
-          sudo apt update -y --fix-missing
-          
-          # 安装交叉编译工具链（ubuntu 22.04下mipsel工具链完整）
-          sudo apt install -y --no-install-recommends \
-            gcc-mipsel-linux-gnu g++-mipsel-linux-gnu \
-            make cmake git pkg-config libtool autoconf automake
-          
-          # 安装mipsel架构的依赖包（22.04源中存在这些包）
-          sudo apt install -y --no-install-recommends \
-            libpng-dev:mipsel zlib1g-dev:mipsel libssl-dev:mipsel
-          
-          # 兼容：安装本机架构依赖（避免脚本路径错误）
-          sudo apt install -y --no-install-recommends \
-            libpng-dev zlib1g-dev libssl-dev
+          sudo apt install -y gcc-mipsel-linux-gnu g++-mipsel-linux-gnu
+          sudo apt install -y make cmake git pkg-config libtool autoconf automake
 
-      - name: Clone libretro core source (pcsx_rearmed)
+      - name: Clone libretro core source (mgba)
         run: |
           git clone https://github.com/libretro/pcsx_rearmed.git libretro-pcsx_rearmed
-          cd libretro-pcsx_rearmed
-          git checkout master
-          # 同步子模块
-          git submodule init
-          git submodule update
+          cd libretro-mgba
+          git checkout master  # 正确的稳定分支
 
       - name: Build pcsx_rearmed libretro core for mips32el
         run: |
           cd libretro-pcsx_rearmed
-          # 指定交叉编译工具链前缀
-          export CROSS_COMPILE=mipsel-linux-gnu-
-          # 编译参数
-          export CC=${CROSS_COMPILE}gcc
-          export CXX=${CROSS_COMPILE}g++
-          export CFLAGS="-march=mips32 -mabi=32 -O2 -I/usr/mipsel-linux-gnu/include"
-          export CXXFLAGS="-march=mips32 -mabi=32 -O2 -I/usr/mipsel-linux-gnu/include"
-          export LDFLAGS="-march=mips32 -mabi=32 -L/usr/mipsel-linux-gnu/lib"
-          
-          # 执行configure（仅使用支持的参数）
-          ./configure --platform=generic --dynarec=none
-          
-          # 编译libretro核心
+          export CC=mipsel-linux-gnu-gcc
+          export CXX=mipsel-linux-gnu-g++
+          # 修复：删除所有 -mlittle-endian 选项（mipsel编译器默认小端）
+          export CFLAGS="-march=mips32 -mabi=32 -O2"
+          export CXXFLAGS="-march=mips32 -mabi=32 -O2"
+          export LDFLAGS="-march=mips32 -mabi=32"
+          # 执行编译
           make -f Makefile.libretro -j$(nproc)
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pcsx_rearmed_libretro_mips32el
+          name: mgba_libretro_mips32el
           path: libretro-pcsx_rearmed/pcsx_rearmed_libretro.so
           retention-days: 30
