--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,6 +1,5 @@
 name: Build pcsx_rearmed libretro core for GKD pixel
 
-# 触发条件：手动触发、push 到 main 分支、PR 到 main 分支
 on:
   workflow_dispatch:
   push:
@@ -9,58 +8,69 @@ on:
   pull_request:
     branches: [ main ]
 
-# 运行环境
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      # 步骤1：检出基础工具（可选，若仓库包含自定义脚本则替换为检出仓库源码）
       - name: Checkout base tools
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
-      # 步骤2：安装系统依赖（基础编译工具）
       - name: Install system dependencies
         run: |
           sudo apt update && sudo apt install -y \
-            wget tar make gcc g++ unzip pkg-config libtool autoconf automake
+            wget tar make gcc g++ unzip pkg-config libtool autoconf automake \
+            git patch libsdl1.2-dev libasound2-dev # 补充pcsx_rearmed依赖
 
-      # 步骤3：下载并解压 GKD pixel 工具链
       - name: Download and extract GKD pixel toolchain
         run: |
-          # 创建工具链目录
           mkdir -p ~/toolchain
-          # 下载工具链
           wget -q https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz -O ~/toolchain/toolchain.tar.gz
-          # 解压工具链（保留目录结构）
           tar -xf ~/toolchain/toolchain.tar.gz -C ~/toolchain --strip-components=1
-          # 验证工具链是否解压成功
           ls -la ~/toolchain/bin/ | grep mipsel-gcw0-linux-uclibc-gcc
 
-      # 步骤4：配置交叉编译环境变量
       - name: Configure cross-compile environment
         run: |
-          # 将工具链添加到系统 PATH
           echo "TOOLCHAIN_PATH=$HOME/toolchain/bin" >> $GITHUB_ENV
           echo "$HOME/toolchain/bin" >> $GITHUB_PATH
-          # 设置交叉编译前缀
           echo "CROSS_COMPILE=mipsel-gcw0-linux-uclibc-" >> $GITHUB_ENV
-          # 设置目标架构和编译参数
-          echo "CFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2" >> $GITHUB_ENV
-          echo "CXXFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2" >> $GITHUB_ENV
+          # 调整CFLAGS，适配pcsx_rearmed的编译要求
+          echo "CFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -I$HOME/toolchain/include" >> $GITHUB_ENV
+          echo "CXXFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -I$HOME/toolchain/include" >> $GITHUB_ENV
+          echo "LDFLAGS=-L$HOME/toolchain/lib" >> $GITHUB_ENV
           echo "ARCH=mips" >> $GITHUB_ENV
+          echo "HOST=mipsel-gcw0-linux-uclibc" >> $GITHUB_ENV
 
-      # 步骤5：克隆 pcsx_rearmed 源码（官方仓库）
       - name: Clone pcsx_rearmed source code
         run: |
           git clone --depth 1 https://github.com/libretro/pcsx_rearmed.git ~/pcsx_rearmed
+          cd ~/pcsx_rearmed
+          # 确保源码目录有可执行的configure脚本
+          chmod +x configure
 
-      # 步骤6：编译 libretro 核心
+      # ========== 关键新增步骤：生成config.h配置文件 ==========
+      - name: Generate config.h for cross-compile
+        run: |
+          cd ~/pcsx_rearmed
+          # 运行configure，指定交叉编译的host和工具链
+          ./configure \
+            --host=${{ env.HOST }} \
+            --prefix=$HOME/toolchain \
+            CC=${{ env.CROSS_COMPILE }}gcc \
+            CXX=${{ env.CROSS_COMPILE }}g++ \
+            CFLAGS="${{ env.CFLAGS }}" \
+            CXXFLAGS="${{ env.CXXFLAGS }}" \
+            LDFLAGS="${{ env.LDFLAGS }}" \
+            --disable-sdl \
+            --disable-alsa \
+            --enable-libretro # 启用libretro核心编译模式
+
+      # ========== 调整编译命令，适配生成的config.h ==========
       - name: Build pcsx_rearmed libretro core
         run: |
           cd ~/pcsx_rearmed
-          # 使用交叉编译工具链编译，指定目标为 libretro
+          # 使用libretro的Makefile，指定交叉编译工具
           make -f Makefile.libretro \
             CC=${{ env.CROSS_COMPILE }}gcc \
             CXX=${{ env.CROSS_COMPILE }}g++ \
@@ -68,15 +78,15 @@ jobs:
             RANLIB=${{ env.CROSS_COMPILE }}ranlib \
             CFLAGS="${{ env.CFLAGS }}" \
             CXXFLAGS="${{ env.CXXFLAGS }}" \
+            LDFLAGS="${{ env.LDFLAGS }}" \
             ARCH=${{ env.ARCH }} \
             -j$(nproc)
           # 验证编译产物
           ls -la ~/pcsx_rearmed/pcsx_rearmed_libretro.so
 
-      # 步骤7：上传编译产物（方便下载）
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: pcsx_rearmed-gkd-pixel
           path: ~/pcsx_rearmed/pcsx_rearmed_libretro.so
-          retention-days: 30 # 产物保留30天
+          retention-days: 30
