--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -20,69 +20,72 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt update && sudo apt install -y \
-            wget tar make gcc g++ unzip pkg-config libtool autoconf automake \
-            git patch libsdl1.2-dev libasound2-dev # 补充pcsx_rearmed依赖
+            wget tar make gcc g++ unzip pkg-config git patch
 
       - name: Download and extract GKD pixel toolchain
         run: |
           mkdir -p ~/toolchain
           wget -q https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz -O ~/toolchain/toolchain.tar.gz
           tar -xf ~/toolchain/toolchain.tar.gz -C ~/toolchain --strip-components=1
-          ls -la ~/toolchain/bin/ | grep mipsel-gcw0-linux-uclibc-gcc
+          # 验证工具链是否解压成功
+          if [ ! -f ~/toolchain/bin/mipsel-gcw0-linux-uclibc-gcc ]; then
+            echo "Toolchain download/extract failed!"
+            exit 1
+          fi
 
       - name: Configure cross-compile environment
         run: |
-          echo "TOOLCHAIN_PATH=$HOME/toolchain/bin" >> $GITHUB_ENV
+          # 添加工具链到系统PATH
           echo "$HOME/toolchain/bin" >> $GITHUB_PATH
-          echo "CROSS_COMPILE=mipsel-gcw0-linux-uclibc-" >> $GITHUB_ENV
-          # 调整CFLAGS，适配pcsx_rearmed的编译要求
-          echo "CFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -I$HOME/toolchain/include" >> $GITHUB_ENV
-          echo "CXXFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -I$HOME/toolchain/include" >> $GITHUB_ENV
-          echo "LDFLAGS=-L$HOME/toolchain/lib" >> $GITHUB_ENV
-          echo "ARCH=mips" >> $GITHUB_ENV
-          echo "HOST=mipsel-gcw0-linux-uclibc" >> $GITHUB_ENV
+          # 定义交叉编译核心变量
+          echo "CROSS=mipsel-gcw0-linux-uclibc-" >> $GITHUB_ENV
+          # 适配mips架构的编译参数（GKD pixel专用）
+          echo "CFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -fPIC" >> $GITHUB_ENV
+          echo "CXXFLAGS=-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -fPIC" >> $GITHUB_ENV
+          # 链接参数：显式链接必要系统库
+          echo "LDFLAGS=-L$HOME/toolchain/lib -lm -lpthread -ldl" >> $GITHUB_ENV
 
       - name: Clone pcsx_rearmed source code
         run: |
           git clone --depth 1 https://github.com/libretro/pcsx_rearmed.git ~/pcsx_rearmed
           cd ~/pcsx_rearmed
-          # 确保源码目录有可执行的configure脚本
-          chmod +x configure
+          # ========== 关键修复：手动生成config.h，解决缺失问题 ==========
+          cat > config.h << EOF
+          #define PACKAGE_VERSION "1.0"
+          #define HAVE_STDINT_H 1
+          #define HAVE_INTTYPES_H 1
+          #define HAVE_STRUCT_TIMESPEC 1
+          #define HAVE_PTHREAD_H 1
+          #define HAVE_DLFCN_H 1
+          #define DYNAREC "lightrec"
+          #define BUILTIN_GPU "peops"
+          #define __LIBRETRO__ 1
+          #undef USE_SDL
+          #undef USE_ALSA
+          EOF
 
-      # ========== 关键新增步骤：生成config.h配置文件 ==========
-      - name: Generate config.h for cross-compile
-        run: |
-          cd ~/pcsx_rearmed
-          # 运行configure，指定交叉编译的host和工具链
-          ./configure \
-            --host=${{ env.HOST }} \
-            --prefix=$HOME/toolchain \
-            CC=${{ env.CROSS_COMPILE }}gcc \
-            CXX=${{ env.CROSS_COMPILE }}g++ \
-            CFLAGS="${{ env.CFLAGS }}" \
-            CXXFLAGS="${{ env.CXXFLAGS }}" \
-            LDFLAGS="${{ env.LDFLAGS }}" \
-            --disable-sdl \
-            --disable-alsa \
-            --enable-libretro # 启用libretro核心编译模式
-
-      # ========== 调整编译命令，适配生成的config.h ==========
       - name: Build pcsx_rearmed libretro core
         run: |
           cd ~/pcsx_rearmed
-          # 使用libretro的Makefile，指定交叉编译工具
+          # 直接使用libretro专属Makefile编译，跳过错误的configure步骤
           make -f Makefile.libretro \
-            CC=${{ env.CROSS_COMPILE }}gcc \
-            CXX=${{ env.CROSS_COMPILE }}g++ \
-            AR=${{ env.CROSS_COMPILE }}ar \
-            RANLIB=${{ env.CROSS_COMPILE }}ranlib \
+            CC=${{ env.CROSS }}gcc \
+            CXX=${{ env.CROSS }}g++ \
+            AR=${{ env.CROSS }}ar \
+            RANLIB=${{ env.CROSS }}ranlib \
             CFLAGS="${{ env.CFLAGS }}" \
             CXXFLAGS="${{ env.CXXFLAGS }}" \
             LDFLAGS="${{ env.LDFLAGS }}" \
-            ARCH=${{ env.ARCH }} \
+            PLATFORM=unix \
+            ARCH=mips \
             -j$(nproc)
-          # 验证编译产物
-          ls -la ~/pcsx_rearmed/pcsx_rearmed_libretro.so
+          # 验证编译产物是否生成
+          if [ -f pcsx_rearmed_libretro.so ]; then
+            echo "Build success! File size: $(du -h pcsx_rearmed_libretro.so)"
+          else
+            echo "Build failed! No core file generated."
+            exit 1
+          fi
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
